--- a/simple-weather/simple-weather/Base.lproj/Main.storyboard
+++ b/simple-weather/simple-weather/Base.lproj/Main.storyboard
@@ -19,65 +19,65 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="YW4-dZ-YQ7" userLabel="subView">
-                                <rect key="frame" x="0.0" y="20" width="320" height="299"/>
+                                <rect key="frame" x="0.0" y="20" width="320" height="261"/>
                                 <subviews>
                                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="o3W-ys-IbW">
-                                        <rect key="frame" x="0.0" y="0.0" width="320" height="299"/>
-                                        <color key="backgroundColor" red="0.6220899224281311" green="0.84600222110748291" blue="0.91994351148605347" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="320" height="261"/>
+                                        <color key="backgroundColor" red="0.12440387159585953" green="0.62791907787322998" blue="0.94083356857299805" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                     </imageView>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Date" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="i1j-a9-yrl">
-                                        <rect key="frame" x="20" y="20" width="49" height="29"/>
-                                        <fontDescription key="fontDescription" type="system" pointSize="24"/>
-                                        <nil key="textColor"/>
+                                        <rect key="frame" x="20" y="20" width="53" height="29"/>
+                                        <fontDescription key="fontDescription" type="boldSystem" pointSize="24"/>
+                                        <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <nil key="highlightedColor"/>
                                     </label>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="252" text="Temperature" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="hql-5C-zOI">
-                                        <rect key="frame" x="20" y="119" width="162" height="36"/>
-                                        <fontDescription key="fontDescription" type="system" pointSize="30"/>
-                                        <nil key="textColor"/>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="252" text="Temp" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="hql-5C-zOI">
+                                        <rect key="frame" x="20" y="109" width="101.5" height="48"/>
+                                        <fontDescription key="fontDescription" type="boldSystem" pointSize="40"/>
+                                        <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <nil key="highlightedColor"/>
                                     </label>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="252" text="Location" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" preferredMaxLayoutWidth="150" translatesAutoresizingMaskIntoConstraints="NO" id="dNR-jB-Zbv">
-                                        <rect key="frame" x="20" y="225" width="75.5" height="24"/>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="252" text="Location" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" preferredMaxLayoutWidth="150" translatesAutoresizingMaskIntoConstraints="NO" id="dNR-jB-Zbv">
+                                        <rect key="frame" x="20" y="207" width="75.5" height="24"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="20"/>
-                                        <nil key="textColor"/>
+                                        <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Clear" translatesAutoresizingMaskIntoConstraints="NO" id="fGm-35-pAg">
-                                        <rect key="frame" x="284" y="100" width="16" height="95"/>
+                                        <rect key="frame" x="193" y="70" width="107.00000000000003" height="107.00000000000003"/>
                                     </imageView>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="252" text="Weather" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Xaw-Tl-70L">
-                                        <rect key="frame" x="226" y="225" width="74" height="24"/>
+                                        <rect key="frame" x="226" y="207" width="74" height="24"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="20"/>
-                                        <nil key="textColor"/>
+                                        <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                 </subviews>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
-                                    <constraint firstItem="hql-5C-zOI" firstAttribute="top" secondItem="i1j-a9-yrl" secondAttribute="bottom" constant="70" id="1f1-aN-VV8"/>
+                                    <constraint firstItem="hql-5C-zOI" firstAttribute="top" secondItem="i1j-a9-yrl" secondAttribute="bottom" constant="60" id="1f1-aN-VV8"/>
                                     <constraint firstAttribute="trailing" secondItem="Xaw-Tl-70L" secondAttribute="trailing" constant="20" id="1fz-eb-NMY"/>
                                     <constraint firstAttribute="trailing" secondItem="fGm-35-pAg" secondAttribute="trailing" constant="20" id="4Wo-DE-e9B"/>
                                     <constraint firstItem="hql-5C-zOI" firstAttribute="leading" secondItem="YW4-dZ-YQ7" secondAttribute="leading" constant="20" id="5JO-cL-6wv"/>
-                                    <constraint firstAttribute="bottom" secondItem="Xaw-Tl-70L" secondAttribute="bottom" constant="50" id="A2Q-os-v3r"/>
+                                    <constraint firstAttribute="bottom" secondItem="Xaw-Tl-70L" secondAttribute="bottom" constant="30" id="A2Q-os-v3r"/>
                                     <constraint firstAttribute="bottom" secondItem="o3W-ys-IbW" secondAttribute="bottom" id="DQj-MH-DI8"/>
-                                    <constraint firstItem="fGm-35-pAg" firstAttribute="top" secondItem="YW4-dZ-YQ7" secondAttribute="top" constant="100" id="YKp-gE-kLU"/>
+                                    <constraint firstItem="fGm-35-pAg" firstAttribute="top" secondItem="YW4-dZ-YQ7" secondAttribute="top" constant="70" id="YKp-gE-kLU"/>
                                     <constraint firstItem="i1j-a9-yrl" firstAttribute="top" secondItem="YW4-dZ-YQ7" secondAttribute="top" constant="20" id="cPk-Cg-Z3N"/>
                                     <constraint firstItem="fGm-35-pAg" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="hql-5C-zOI" secondAttribute="trailing" constant="8" symbolic="YES" id="cXO-cY-BZh"/>
                                     <constraint firstItem="Xaw-Tl-70L" firstAttribute="top" secondItem="fGm-35-pAg" secondAttribute="bottom" constant="30" id="cmB-FY-8Bz"/>
                                     <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="i1j-a9-yrl" secondAttribute="trailing" constant="20" symbolic="YES" id="dxJ-Qn-yGa"/>
                                     <constraint firstItem="i1j-a9-yrl" firstAttribute="leading" secondItem="YW4-dZ-YQ7" secondAttribute="leading" constant="20" id="gyh-tP-lV2"/>
-                                    <constraint firstItem="dNR-jB-Zbv" firstAttribute="top" secondItem="hql-5C-zOI" secondAttribute="bottom" constant="70" id="iEY-Gr-aBs"/>
+                                    <constraint firstItem="dNR-jB-Zbv" firstAttribute="top" secondItem="hql-5C-zOI" secondAttribute="bottom" constant="50" id="iEY-Gr-aBs"/>
                                     <constraint firstItem="o3W-ys-IbW" firstAttribute="top" secondItem="YW4-dZ-YQ7" secondAttribute="top" id="raY-v4-Pvm"/>
                                     <constraint firstAttribute="trailing" secondItem="o3W-ys-IbW" secondAttribute="trailing" id="tQ0-dm-dRf"/>
                                     <constraint firstItem="o3W-ys-IbW" firstAttribute="leading" secondItem="YW4-dZ-YQ7" secondAttribute="leading" id="u9s-g3-gP4"/>
                                     <constraint firstItem="Xaw-Tl-70L" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="dNR-jB-Zbv" secondAttribute="trailing" constant="8" id="uWe-No-iEb"/>
-                                    <constraint firstAttribute="bottom" secondItem="dNR-jB-Zbv" secondAttribute="bottom" constant="50" id="vrQ-Ad-5cN"/>
+                                    <constraint firstAttribute="bottom" secondItem="dNR-jB-Zbv" secondAttribute="bottom" constant="30" id="vrQ-Ad-5cN"/>
                                     <constraint firstItem="dNR-jB-Zbv" firstAttribute="leading" secondItem="YW4-dZ-YQ7" secondAttribute="leading" constant="20" id="zdD-mK-LYv"/>
                                 </constraints>
                             </view>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="70" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="j7d-G7-BqT">
-                                <rect key="frame" x="0.0" y="319" width="320" height="249"/>
+                                <rect key="frame" x="0.0" y="281" width="320" height="287"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <prototypes>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleAspectFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="ForecastCell" rowHeight="70" id="Zx8-k7-IOX" customClass="ForecastCell" customModule="simple_weather" customModuleProvider="target">
@@ -91,30 +91,31 @@
                                                     <rect key="frame" x="25" y="11" width="34" height="48"/>
                                                 </imageView>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="weekDay" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="0Ec-o9-y5J">
-                                                    <rect key="frame" x="79" y="11" width="70" height="21"/>
-                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                                    <nil key="textColor"/>
+                                                    <rect key="frame" x="79" y="11" width="75" height="21"/>
+                                                    <fontDescription key="fontDescription" type="boldSystem" pointSize="17"/>
+                                                    <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="weatherCondition" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="wKe-Us-zhZ">
                                                     <rect key="frame" x="79" y="38" width="136" height="21"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                                    <nil key="textColor"/>
+                                                    <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="252" text="max.temp" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="4wP-v8-mIs">
-                                                    <rect key="frame" x="234" y="10" width="76" height="21"/>
-                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                                    <nil key="textColor"/>
+                                                    <rect key="frame" x="227.5" y="10" width="82.5" height="21"/>
+                                                    <fontDescription key="fontDescription" type="boldSystem" pointSize="17"/>
+                                                    <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="minTemp" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="iPS-iO-Eiq">
                                                     <rect key="frame" x="241" y="31" width="69" height="38.5"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                                    <nil key="textColor"/>
+                                                    <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                             </subviews>
+                                            <color key="backgroundColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
                                             <constraints>
                                                 <constraint firstAttribute="bottomMargin" secondItem="RIi-57-t9e" secondAttribute="bottom" id="43W-Oi-0WJ"/>
                                                 <constraint firstAttribute="trailing" secondItem="4wP-v8-mIs" secondAttribute="trailing" constant="10" id="EUs-bw-X18"/>
@@ -158,6 +159,7 @@
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
                     <connections>
+                        <outlet property="backgroundColor" destination="o3W-ys-IbW" id="7iX-Ew-xmX"/>
                         <outlet property="dateLabel" destination="i1j-a9-yrl" id="i7e-Tg-Jt8"/>
                         <outlet property="locationLabel" destination="dNR-jB-Zbv" id="wbg-6O-dGN"/>
                         <outlet property="tableView" destination="j7d-G7-BqT" id="5ej-Iz-cbP"/>
