--- a/simple-weather/simple-weather/Base.lproj/Main.storyboard
+++ b/simple-weather/simple-weather/Base.lproj/Main.storyboard
@@ -44,7 +44,7 @@
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Clear" translatesAutoresizingMaskIntoConstraints="NO" id="fGm-35-pAg">
-                                        <rect key="frame" x="193" y="70" width="107.00000000000003" height="107.00000000000003"/>
+                                        <rect key="frame" x="284" y="70" width="16" height="107"/>
                                     </imageView>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="252" text="Weather" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Xaw-Tl-70L">
                                         <rect key="frame" x="226" y="207" width="74" height="24"/>
@@ -159,7 +159,6 @@
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
                     <connections>
-                        <outlet property="backgroundColor" destination="o3W-ys-IbW" id="7iX-Ew-xmX"/>
                         <outlet property="dateLabel" destination="i1j-a9-yrl" id="i7e-Tg-Jt8"/>
                         <outlet property="locationLabel" destination="dNR-jB-Zbv" id="wbg-6O-dGN"/>
                         <outlet property="tableView" destination="j7d-G7-BqT" id="5ej-Iz-cbP"/>
