--- a/simple-weather/simple-weather/Base.lproj/Main.storyboard
+++ b/simple-weather/simple-weather/Base.lproj/Main.storyboard
@@ -23,7 +23,7 @@
                                 <subviews>
                                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="o3W-ys-IbW">
                                         <rect key="frame" x="0.0" y="0.0" width="320" height="261"/>
-                                        <color key="backgroundColor" red="0.12440387159585953" green="0.62791907787322998" blue="0.94083356857299805" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                        <color key="backgroundColor" red="0.016804177310000001" green="0.19835099580000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                     </imageView>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Date" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="i1j-a9-yrl">
                                         <rect key="frame" x="20" y="20" width="53" height="29"/>
